# Andromeda-Old

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  WORKSPACE.bazel
.github/workflows/: continuous-integration.yaml  security-analysis.yaml
andromeda/: BUILD.bazel  andromeda.hpp
andromeda/core/: BUILD.bazel  core.hpp  instance.hpp  link.hpp
andromeda/core/system/: BUILD.bazel
andromeda/core/system/event/: BUILD.bazel  event.hpp  manager.hpp
andromeda/core/system/event/type/: BUILD.bazel  instance.hpp  keyboard.hpp  monitor.hpp  mouse.hpp  window.hpp
andromeda/core/system/graphics/: BUILD.bazel
andromeda/core/system/graphics/api/: BUILD.bazel  engine.cpp  engine.hpp
andromeda/core/system/graphics/display/: BUILD.bazel  manager.hpp  monitor.hpp  window.hpp
andromeda/core/system/graphics/renderer/: BUILD.bazel  context.hpp
andromeda/core/system/input/: BUILD.bazel  manager.hpp  state.hpp
andromeda/core/system/input/code/: BUILD.bazel  key.hpp  mouse.hpp
andromeda/core/system/log/: BUILD.bazel  log.cpp  log.hpp
andromeda/core/system/logging/: BUILD.bazel  log.cpp  log.hpp
andromeda/core/system/platform/: BUILD.bazel  linux.hpp
andromeda/core/system/platform/graphics/: BUILD.bazel
andromeda/core/system/platform/graphics/vulkan/api/: BUILD.bazel  engine.hpp
andromeda/core/system/platform/graphics/vulkan/renderer/: BUILD.bazel
andromeda/core/system/platform/linux/: BUILD.bazel
andromeda/core/system/platform/linux/graphics/: BUILD.bazel
andromeda/core/system/platform/linux/graphics/display/: BUILD.bazel  manager.cpp  manager.hpp  monitor.cpp  monitor.hpp  window.cpp  window.hpp
andromeda/core/system/platform/mac/: BUILD.bazel
andromeda/core/system/platform/windows/: BUILD.bazel
andromeda/core/system/structure/: BUILD.bazel  bitmask.hpp  status.hpp  tuple.hpp
andromeda/core/system/structure/status/: BUILD.bazel  status.hpp
andromeda/core/system/utilities/: BUILD.bazel
andromeda/core/system/utilities/instrumentation/: BUILD.bazel  instrumentor.hpp
andromeda/test/: BUILD.bazel
andromeda/test/core/: BUILD.bazel  core.cc  instance.cc
andromeda/test/core/system/: BUILD.bazel
andromeda/test/core/system/event/: BUILD.bazel  event.cc  manager.cc
andromeda/test/core/system/event/type/: BUILD.bazel  keyboard.cc  monitor.cc  mouse.cc  window.cc
andromeda/test/core/system/graphics/: BUILD.bazel
andromeda/test/core/system/graphics/display/: BUILD.bazel  monitor.cc  window.cc
andromeda/test/core/system/log/: BUILD.bazel  log.cc
andromeda/test/core/system/platform/: BUILD.bazel
andromeda/test/core/system/platform/linux/: BUILD.bazel
andromeda/test/core/system/platform/linux/graphics/: BUILD.bazel
andromeda/test/core/system/platform/linux/graphics/display/: BUILD.bazel  manager.cc
andromeda/test/core/system/structure/: BUILD.bazel  bitmask.cc  status.cc  tuple.cc
andromeda/test/log/: log.cc
