# ::
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "andromeda",
    includes = [
        "andromeda",
        "andromeda/andromeda",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-lpthread"],
        "@//conditions:default": [],
    }),
    deps = [
        "@andromeda//andromeda",
        "@andromeda//andromeda/core:link",
    ],
)
