# ::andromeda

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "andromeda",
    hdrs = [
        "andromeda.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core",
        "@andromeda//andromeda/core:instance",
        "@andromeda//andromeda/core/system/event",
        "@andromeda//andromeda/core/system/event:manager",
        "@andromeda//andromeda/core/system/event/type:monitor",
        "@andromeda//andromeda/core/system/event/type:mouse",
        "@andromeda//andromeda/core/system/event/type:window",
        "@andromeda//andromeda/core/system/graphics/display:manager",
        "@andromeda//andromeda/core/system/graphics/display:monitor",
        "@andromeda//andromeda/core/system/graphics/display:window",
        "@andromeda//andromeda/core/system/log",
        "@andromeda//andromeda/core/system/platform/linux/graphics/display:manager",
        "@andromeda//andromeda/core/system/structure:bitmask",
        "@andromeda//andromeda/core/system/structure:status",
        "@andromeda//andromeda/core/system/structure:tuple",
    ],
)
