# ::andromeda::core::system::event

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "manager",
    hdrs = [
        "manager.hpp",
    ],
    deps = [
        ":event",
        "@andromeda//andromeda/core/system/event/type:monitor",
        "@andromeda//andromeda/core/system/event/type:mouse",
        "@andromeda//andromeda/core/system/event/type:window",
    ],
)

cc_library(
    name = "event",
    hdrs = [
        "event.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core",
        "@andromeda//andromeda/core/system/structure:bitmask",
        "@andromeda//andromeda/core/system/structure:status",
    ],
)
