# ::andromeda::core::system::platform

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "linux",
    hdrs = ["linux.hpp"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    deps = [
        "@andromeda//andromeda/core/system/platform/linux/graphics/display:manager",
    ],
)
