# ::andromeda::core::system::event::type

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "keyboard",
    hdrs = [
        "keyboard.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event",
        "@andromeda//andromeda/core/system/input/code:key",
    ],
)

cc_library(
    name = "monitor",
    hdrs = [
        "monitor.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event",
    ],
)

cc_library(
    name = "mouse",
    hdrs = [
        "mouse.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event",
        "@andromeda//andromeda/core/system/input/code:key",
        "@andromeda//andromeda/core/system/input/code:mouse",
        "@andromeda//andromeda/core/system/structure:tuple",
    ],
)

cc_library(
    name = "window",
    hdrs = [
        "window.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event",
        "@andromeda//andromeda/core/system/structure:tuple",
    ],
)
