# ::andromeda::core::system::graphics::display

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "manager",
    hdrs = [
        "manager.hpp",
    ],
    deps = [
        ":monitor",
        ":window",
    ],
)

cc_library(
    name = "monitor",
    hdrs = [
        "monitor.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event:manager",
        "@andromeda//andromeda/core/system/event/type:monitor",
    ],
)

cc_library(
    name = "window",
    hdrs = [
        "window.hpp",
    ],
    deps = [
        "@andromeda//andromeda/core",
        "@andromeda//andromeda/core/system/event:manager",
        "@andromeda//andromeda/core/system/event/type:window",
        "@andromeda//andromeda/core/system/input:manager",
        "@andromeda//andromeda/core/system/structure:bitmask",
    ],
)
