# ::andromeda::test::core::system::event

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "manager",
    srcs = ["manager.cc"],
    deps = [
        "@andromeda//andromeda/core/system/event:manager",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "event",
    srcs = [
        "event.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/event",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
