# ::andromeda::test::log

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "log",
    srcs = [
        "log.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/log",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
