# ::andromeda::test::core::system::structure

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "bitmask",
    srcs = [
        "bitmask.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/structure:bitmask",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "status",
    srcs = [
        "status.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/structure:status",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "tuple",
    srcs = [
        "tuple.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/structure:tuple",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
