# ::andromeda::test::core::system::graphics::display

package(
    default_visibility = ["//visibility:public"],
)

cc_test(
    name = "monitor",
    srcs = [
        "monitor.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/graphics/display:monitor",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "window",
    srcs = [
        "window.cc",
    ],
    deps = [
        "@andromeda//andromeda/core/system/graphics/display:window",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
